added metadata to `index.html`

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>Crane Song</title>
+    <meta
+      name="description"
+      content="Official Website of Singer Songwriter: Crane Song"
+    />
+    <meta
+      name="keywords"
+      content="music,musician,singer,songwriter,alternative,guitar"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
